_input to _forward_3d_gui_input

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
+"column": 9,
+"folded_lines": Array[int]([100]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 12.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 19,
-"selection_to_column": 13,
-"selection_to_line": 22,
+"row": 64,
+"scroll_position": 47.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
-"folded_lines": Array[int]([28, 87]),
+"column": 1,
+"folded_lines": Array[int]([28, 86]),
 "h_scroll_position": 0,
-"row": 14,
-"scroll_position": 7.89955,
+"row": 75,
+"scroll_position": 48.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
