--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,14 +32,14 @@ open_scenes=PackedStringArray("res://addons/example/TestRoom.tscn")
 current_scene="res://addons/example/TestRoom.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://addons/example/snapping_system.gd", "res://addons/snapping_system/snapping_system.gd"]
-selected_script="res://addons/snapping_system/snapping_system.gd"
-open_help=["EditorPlugin", "InputEvent", "InputEventAction", "InputEventKey", "InputMap"]
+selected_script="res://addons/example/snapping_system.gd"
+open_help=["EditorPlugin", "InputEvent", "InputEventAction", "InputEventKey", "InputMap", "RenderingServer"]
 script_split_offset=140
 list_split_offset=0
 
