Normal right click toggle

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=2
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
-dock_filesystem_selected_paths=PackedStringArray("res://addons/example/snapping_system.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://addons/example/object.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://addons/", "res://addons/snapping_system/", "res://addons/example/", "res://addons/assetgripper/")
 dock_split_1=0
 dock_3="Scene,Import"
@@ -38,8 +38,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://addons/example/snapping_system.gd", "res://addons/snapping_system/snapping_system.gd"]
-selected_script="res://addons/example/snapping_system.gd"
-open_help=["EditorPlugin", "InputEvent", "InputEventAction", "InputEventKey", "InputMap", "RenderingServer"]
+selected_script="res://addons/snapping_system/snapping_system.gd"
+open_help=["Camera3D", "EditorPlugin", "EditorUndoRedoManager", "InputEvent", "InputEventAction", "InputEventKey", "InputMap", "RenderingServer"]
 script_split_offset=140
 list_split_offset=0
 
