--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 17,
 "folded_lines": Array[int]([100]),
 "h_scroll_position": 0,
-"row": 64,
-"scroll_position": 47.0,
-"selection": false,
+"row": 8,
+"scroll_position": 33.0,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 8,
+"selection_to_column": 17,
+"selection_to_line": 8,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
-"folded_lines": Array[int]([28, 86]),
+"column": 0,
+"folded_lines": Array[int]([30, 83, 100]),
 "h_scroll_position": 0,
-"row": 75,
-"scroll_position": 48.0,
+"row": 21,
+"scroll_position": 59.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
