FIX: Snap mode toggles multiple time

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=2
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
-dock_filesystem_selected_paths=PackedStringArray("res://addons/example/object.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://addons/", "res://addons/snapping_system/", "res://addons/example/", "res://addons/assetgripper/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://addons/", "res://addons/snapping_system/")
 dock_split_1=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://addons/example/TestRoom.tscn")
-current_scene="res://addons/example/TestRoom.tscn"
+open_scenes=PackedStringArray("res://test_level/TestRoom.tscn", "res://test_level/object.tscn")
+current_scene="res://test_level/TestRoom.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://addons/example/snapping_system.gd", "res://addons/snapping_system/snapping_system.gd"]
+open_scripts=["res://README.md", "res://addons/snapping_system/example.gd", "res://addons/snapping_system/snapping_system.gd"]
 selected_script="res://addons/snapping_system/snapping_system.gd"
 open_help=["Camera3D", "EditorPlugin", "EditorUndoRedoManager", "InputEvent", "InputEventAction", "InputEventKey", "InputMap", "RenderingServer"]
 script_split_offset=140
