--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,31 +1,13 @@
-[res://addons/example/snapping_system.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 17,
-"folded_lines": Array[int]([100]),
-"h_scroll_position": 0,
-"row": 8,
-"scroll_position": 33.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 8,
-"selection_to_column": 17,
-"selection_to_line": 8,
-"syntax_highlighter": "GDScript"
-}
-
 [res://addons/snapping_system/snapping_system.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 0,
-"folded_lines": Array[int]([30, 83, 100]),
+"folded_lines": Array[int]([30, 86, 103]),
 "h_scroll_position": 0,
 "row": 21,
-"scroll_position": 59.0,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -44,7 +26,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://new_script.gd]
+[res://README.md]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -52,8 +34,26 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
+"syntax_highlighter": "Plain Text"
+}
+
+[res://addons/snapping_system/example.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 17,
+"folded_lines": Array[int]([100]),
+"h_scroll_position": 221,
+"row": 8,
+"scroll_position": 9.0,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 8,
+"selection_to_column": 17,
+"selection_to_line": 8,
 "syntax_highlighter": "GDScript"
 }
